# MemoryCard

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  create_icon.py  game_save_sync.py  requirements.txt  schedule_macos.sh  schedule_windows.bat  setup.py  simple_sync.py
.github/workflows/: release.yml  test.yml
MemoryCard/: package-lock.json  package.json  vitest.config.ts
MemoryCard/src/: App.css  App.test.tsx  App.tsx
MemoryCard/src-tauri/: Cargo.toml  tauri.conf.json
MemoryCard/src-tauri/capabilities/: default.json
MemoryCard/src-tauri/icons/: icon.icns
MemoryCard/src-tauri/src/: lib.rs
MemoryCard/src/test/: setup.ts
desktop-app/: package-lock.json  package.json
desktop-app/src/: App.css  App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
